// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBoxInput /> should render the correct markup 1`] = `
<input
  checked={false}
  className="jUZWuX"
  disabled={false}
  id="genrerockinput"
  name="genre"
  onChange={[Function]}
  type="checkbox"
  value="rock"
/>
`;

exports[`<CheckBoxInput /> should render the correct markup when additional props are passed 1`] = `
<input
  checked={false}
  className="input--check-box jUZWuX"
  disabled={false}
  id="genrerockinput"
  name="genre"
  onChange={[Function]}
  type="checkbox"
  value="rock"
/>
`;

exports[`<CheckBoxInput /> should render the correct markup when the disabled prop equals true 1`] = `
<input
  checked={false}
  className="jUZWuX"
  disabled={true}
  id="genrerockinput"
  name="genre"
  onChange={[Function]}
  type="checkbox"
  value="rock"
/>
`;

exports[`<CheckBoxInput /> should render the correct markup when the isChecked prop equals true 1`] = `
<input
  checked={true}
  className="jUZWuX"
  disabled={false}
  id="genrerockinput"
  name="genre"
  onChange={[Function]}
  type="checkbox"
  value="rock"
/>
`;

exports[`<CheckBoxInput /> should render the correct markup when the size prop equals large 1`] = `
<input
  checked={false}
  className="jUZWuX"
  disabled={false}
  id="genrerockinput"
  name="genre"
  onChange={[Function]}
  type="checkbox"
  value="rock"
/>
`;
